# orbit

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  docker-compose.yaml  pyproject.toml  requirements.txt
agents/ear_to_ground/: agent.py  agent_executor.py  card.py  config.py  server.py  streaming_service.py
agents/fact_checker/: agent.py  agent_executor.py  card.py  config.py  server.py
agents/legal_counsel/: __init__.py  agent.py  agent_executor.py  card.py  config.py  server.py
agents/press_secretary/: __init__.py  agent.py  agent_executor.py  card.py  config.py  server.py
agents/risk_score/: __init__.py  agent.py  agent_executor.py  card.py  config.py  server.py
agents/sentiment_analyst/: agent.py  agent_executor.py  card.py  config.py  event_service.py  server.py
common/: llm.py  slim_client.py
config/docker/slim/: server-config.yaml
data/: crisis_playbook.md  legal_rubric.md  tweets_astronomer.json
docker/: Dockerfile.ear-to-ground  Dockerfile.fact-checker  Dockerfile.gateway  Dockerfile.legal-counsel  Dockerfile.press-secretary  Dockerfile.risk-score  Dockerfile.sentiment-analyst
docs/: AGENT_SPECIFICATIONS.md  TECHNICAL_IMPLEMENTATION.md  orbit-architecture.md  orbit-mock-ui-prd.md  orbit-prd.md  orbit-tasks.md  slim-migration.md
gateway/: main.py
gateway/frontend/: index.html  package.json
gateway/frontend/src/: App.tsx  index.css
gateway/frontend/src/api/: orbit.ts
gateway/frontend/src/components/: AgentPanel.tsx  CrisisAlert.tsx  PolicyPanel.tsx  SentimentDisplay.tsx  StatementDraft.tsx
gateway/frontend/src/data/: mockData.ts
src/: App.tsx  index.css
src/components/: AgentPanel.tsx  CrisisAlert.tsx  PolicyPanel.tsx  StatementDraft.tsx  Timeline.tsx
src/data/: mockData.ts
